# minimulllm

./: README.md  Untitled.ipynb  code_execution_script.py  example.py  example2.py  example_with_args.py  flow.py  pyproject.toml  requirements.txt  secret.py  tools.py  type.py
src/: async_client.py  browser_tool.py  client.py  code_interpreter.py  code_interpretter.py  flow.py  function_call.py  prompt.py  secret.py  tools.py  type.py  web_search_tool.py
