[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minimulllm"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
authors = [{ name = "stonzw" }]
dependencies = [
    "anthropic>=0.42.0",
    "openai>=1.59.3",
    "pydantic>=2.10.4",
]

# どのフォルダをモジュールとして扱うかを書きます。
[tool.setuptools]
py-modules = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.6",
]
