[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minimulllm"
version = "0.0.1"
description = ""
requires-python = ">=3.10"
authors = [{ name = "stonzw" }]
dependencies = [
    "aiohttp>=3.11.11",
    "anthropic>=0.42.0",
    "google-genai>=1.0.0",
    "html2text>=2024.2.26",
    "jupyter>=1.1.1",
    "openai>=1.59.3",
    "pydantic>=2.10.4",
    "python-dotenv>=1.0.1",
    "selenium>=4.28.1",
    "webdriver-manager>=4.0.2",
]

[tool.poetry.packages]
include = ["src"]

[tool.setuptools]
py-modules = ["src"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "ruff>=0.8.6",
]
